--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+# v1.0.3 - ???
+Bugfixes
+1. Array length was not updated when array was shrunk.
+
 # v1.0.2 - Sun Dec 29 22:24:37 SAST 2019
 Additions
 1. Added ds_str_chsubst() functions for substituting characters in a string.
