--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,6 @@
-# v1.0.4 - ???
-
+# v1.0.4 - Sun 13 Dec 2020 10:03:46 SAST
+Additions
+1. Added property lists (ds_plist) module.
 
 # v1.0.3 - Thu Aug 13 10:52:51 SAST 2020
 Bugfixes
