--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,8 @@
 # v1.0.5 - ???
 Additions
 1. Added a substring function to ds_str.h (ds_str_substring()).
+2. Changed ds_arrays to use a length of size_t (previously used
+   a length of uint16_t).
 
 # v1.0.4 - Sun 13 Dec 2020 10:03:46 SAST
 Additions
