--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+# v1.0.6 - ???
+
+Bugfixes
+1. Bug in ds_str_substring() when substring is the length of entire source
+   string.
+
 # v1.0.5 - Thu 18 Feb 2021 16:53:25 SAST
 Additions
 1. Added a substring function to ds_str.h (ds_str_substring()).
