--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,6 @@
 # v1.0.6 - ???
+Features
+1. Added scripts to build for Android.
 
 Bugfixes
 1. Bug in ds_str_substring() when substring is the length of entire source
