--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,7 @@
 # v1.0.6 - ???
 Features
 1. Added scripts to build for Android.
+2. Added ds_table module for tabular data (2D arrays).
 
 Bugfixes
 1. Bug in ds_str_substring() when substring is the length of entire source
