--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,4 @@
-# v1.0.6 - ???
+# v1.0.6 - Fri 04 Nov 2022 07:28:21 SAST
 Features
 1. Added scripts to build for Android.
 2. Added ds_table module for tabular data (2D arrays).
